--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   },
   "dependencies": {
     "@discordjs/voice": "0.19.0",
-    "@ffmpeg-installer/ffmpeg": "1.1.0",
-    "discord.js": "14.25.1"
+    "@snazzah/davey": "0.1.8",
+    "discord.js": "14.25.1",
+    "dotenv": "17.2.3",
+    "ffmpeg-static": "5.3.0",
+    "sodium-native": "5.0.10"
   },
   "devDependencies": {
     "@eslint/js": "9.39.1",
