--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "discord.js": "14.25.1",
     "dotenv": "17.2.3",
     "opusscript": "0.1.1",
-    "ffmpeg-static": "5.3.0",
-    "sodium-native": "5.0.10"
+    "ffmpeg-static": "5.3.0"
   },
   "devDependencies": {
     "@eslint/js": "9.39.1",
