--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "prettier:write": "npx prettier . --write"
   },
   "dependencies": {
+    "@discordjs/opus": "0.10.0",
     "@discordjs/voice": "0.19.0",
     "@snazzah/davey": "0.1.8",
     "discord.js": "14.25.1",
     "dotenv": "17.2.3",
-    "opusscript": "0.1.1",
     "ffmpeg-static": "5.3.0"
   },
   "devDependencies": {
