--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prettier:write": "npx prettier . --write"
   },
   "dependencies": {
-    "@discordjs/opus": "0.10.0",
+    "opusscript": "0.1.1",
     "@discordjs/voice": "0.19.0",
     "@snazzah/davey": "0.1.8",
     "discord.js": "14.25.1",
